--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
     <section>
         <nav>
             <div class="nav__container">
-                <a class="logo" href="index.html">    
+                <a class="logo" href="index.html">
                     <img class="logo__img" src="./assets/logo.svg" alt="">
                     <span class="logo__text">Plant Shop</span>
                 </a>
@@ -56,7 +56,26 @@
         </nav>
     </section>
     <main>
-        about
+        <section id="product">
+            <div class="container">
+                <div class="row">
+                    <div class="product__container">
+                        <div class="product__img--wrapper">
+                            <img src="./assets//areca-palm.png" alt="" class="product__img">
+                        </div>
+                        <div class="product__info">
+                            <h3 class="product__title">Plant</h3>
+                            <p class="product__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
+                                nihil a adipisci est beatae reprehenderit, explicabo dolorem. Quae, modi, et veniam quod
+                                dolorem, expedita quidem omnis optio labore reiciendis suscipit?</p>
+                            <h4 class="product__price">£19.99</h4>
+                            <button class="btn w-100">Add to Basket</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 <footer>
