--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/logo.svg">
     <title>Plant Shop</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7d8f1910d8.js" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
     <section id="landing">
         <nav>
             <div class="nav__container">
-                <a class="logo" href="index.html">    
+                <a class="logo" href="index.html">
                     <img class="logo__img" src="./assets/logo.svg" alt="">
                     <span class="logo__text">Plant Shop</span>
                 </a>
@@ -35,14 +36,20 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="menu" id="menu">
-                    <button class="menu__btn--close" onclick="closeMenu()"><i class="fas fa-times"></i></button>
-                    <ul class="menu__links">
-                        <li class="menu__link--list"><a class="menu__link" onclick="closeMenu()" href="#header">About</a></li>
-                        <li class="menu__link--list"><a class="menu__link" onclick="closeMenu()" href="#featured">Browse</a></li>
-                        <li class="menu__link--list"><a class="menu__link" onclick="closeMenu()" href="">Basket</a></li>
-                    </ul>
-                    <div class="img__container--menu">
-                        <img class="logo__img" src="./assets/logo.svg" alt="">
+                    <div class="menu__empty" onclick="closeMenu()"></div>
+                    <div class="menu__overlay">
+                        <button class="menu__btn--close" onclick="closeMenu()"><i class="fas fa-times"></i></button>
+                        <ul class="menu__links">
+                            <li class="menu__link--list"><a class="menu__link" onclick="closeMenu()"
+                                    href="#header">About</a></li>
+                            <li class="menu__link--list"><a class="menu__link" onclick="closeMenu()"
+                                    href="#featured">Browse</a></li>
+                            <li class="menu__link--list"><a class="menu__link" onclick="closeMenu()" href="">Basket</a>
+                            </li>
+                        </ul>
+                        <div class="img__container--menu">
+                            <img class="logo__img" src="./assets/logo.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -132,7 +139,7 @@
                             <button class="plant__btn btn">Add to Basket</button>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
@@ -175,4 +182,5 @@
         </div>
     </section>
 </footer>
+
 </html>
