checking if auto updates plantshop.shop

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <header>
             <div class="header__container">
                 <div class="header__description">
-                    <h1 class="text-green">Selling plants of the highest quality</h1>
+                    <h1 class="text-green">Selling plants & pots of the highest quality</h1>
                     <h2>Explore a range of plants with <span class="text-green">Plant Shop</span></h2>
                     <a href="browse.html">
                         <button class="btn">Browse Plants</button>
