--- a/checkout.html
+++ b/checkout.html
@@ -18,7 +18,7 @@
     <script> 
     $(function(){
     $("#header").load("header.html"); 
-    $("#footer").load("footer.html"); 
+    $("#footer").load("footer.html");  
     });
     </script> 
 </head>
@@ -26,7 +26,14 @@
 <body id="body">
     <div id="header"></div>
     <main>
-        about
+        <div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
     </main>
     <div id="footer"></div>
 </body>
