--- a/checkout.html
+++ b/checkout.html
@@ -26,11 +26,11 @@
 <body id="body">
     <div id="header"></div>
     <main>
-        <div>
-            <div>
-
+        <div id="mainCheckoutDiv" class="border">
+            <div class="border">
+                <p>Hello World 2</p>
             </div>
-            <div>
+            <div class="border">
 
             </div>
         </div>
