--- a/client/product.html
+++ b/client/product.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>Plant Shop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/7d8f1910d8.js" crossorigin="anonymous"></script>
     <script src="app.js"></script>
     <script
